# israel_palastine_reddit_stance_analysis

./: README.md  notebook.ipynb  notebook_stuck.ipynb  pyproject.toml
.ipynb_checkpoints/: notebook-checkpoint.ipynb
data/gold/: stance_label_sample - labled.csv
data/prelabeled/: training_ready_2025-09-26.csv
scripts/: code_to_text_ratio.py
