[project]
name = "data-science-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
    "kagglehub[pandas-datasets] (>=0.3.12,<0.4.0)",
    "matplotlib (>=3.10.5,<4.0.0)",
    "nltk (>=3.9.1,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "numpy (>=2.3.2,<3.0.0)",
    "plotly (>=6.3.0,<7.0.0)",
    "textblob (>=0.19.0,<0.20.0)",
    "vadersentiment (>=3.3.2,<4.0.0)",
    "scikit-learn (>=1.7.1,<2.0.0)",
    "wordcloud (>=1.9.4,<2.0.0)",
    "kaleido (>=1.1.0,<2.0.0)",
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
